# MatterTune_diffusion

./: .gitignore  combinext.py  pretrain.py  pretrain_50k_proto.out  pretrain_proto_mixed.out  pretrain_val.py  pyproject.toml  temp.ipynb
examples/matbench/: matbenchmark-foldx.py
examples/water-thermodynamics/: energy_reference.py
examples/water-thermodynamics/data/: train_water_30_eVAng.xyz
src/mattertune/: main.py  main.py.29359af3d86c46dd8578db7e2eb7280e.tmp  normalization.py  pretrained.py
src/mattertune/backbones/orb/: model.py
src/mattertune/backbones/uma/: model.py
src/mattertune/configs/: __init__.py
src/mattertune/configs/finetune/: __init__.py
src/mattertune/configs/finetune/properties/: __init__.py
src/mattertune/data/: datamodule.py  xyz.py
src/mattertune/finetune/: loss.py  properties.py
src/mattertune/wrappers/: __init__.py  ensemble.py
src/mattertune/wrappers/utils/: graph_partition.c
